# Arduino_JBWopr_Library

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  copy_to_libraries.sh  library.properties  platformio.ini
examples/: WOPR_ButtonDemo.ino  WOPR_DefconLedDemo.ino  WOPR_DisplayDemo.ino  WOPR_v3.ino
examples/JBWopr_AudioDemo/: JBWopr_AudioDemo.ino
examples/JBWopr_ButtonDemo/: JBWopr_ButtonDemo.ino
examples/JBWopr_DefconDemo/: JBWopr_DefconDemo.ino
examples/JBWopr_DeviceDemo/: JBWopr_DeviceDemo.ino  secrets.h
examples/JBWopr_DisplayDemo/: JBWopr_DisplayDemo.ino
examples/JBWopr_Firmware/: JBWopr_Firmware.ino
src/: jbwopr.cpp  jbwopr.h  jbwoprha.cpp  jbwoprha.h  jbwoprhelpers.cpp  jbwoprhelpers.h  jbwoprmqtt.cpp  jbwoprmqtt.h  jbwoprwifi.cpp  jbwoprwifi.h  tz_data.h  wopr.cpp  wopr.h
src/effects/: jbwopreffects.cpp  jbwopreffects.h  jbwoprnokiatune.cpp  jbwoprnokiatune.h  jbwoprtherickeffect.cpp  jbwoprtherickeffect.h
src/ha/: ha_abbr.h  mdi_consts.h
test/: mqtttest.py
